fix text truncate bug in forum list

--- a/projects/pwa/src/styles.scss
+++ b/projects/pwa/src/styles.scss
@@ -19,9 +19,9 @@
 .image-style-side {
   max-width: 50%;
   float: right;
-  margin-left: var(--ck-image-style-spacing);
+  // margin-left: var(--ck-image-style-spacing);
 
-  margin-block-start:0!important;
+  margin-block-start:!important;
   margin-block-end:0!important;
   margin-inline-start: 0!important;
   margin-inline-end:0 !important;
